Removed transparent borders. Fixed spacing. Changed nav font color.

--- a/great-idea-website/css/index.css
+++ b/great-idea-website/css/index.css
@@ -72,20 +72,20 @@ h1, h2, h3, h4, h5 {
 
 .logo {
 	display: inline-block;
+	margin-top: 15px;
 	margin-left: auto;
 	padding-left: 90px;
 }
 
 nav {
-	border: 2px solid transparent;
+	padding-bottom: 20px;
 }
 
 nav a {
-	border: 2px dashed transparent;
 	display: inline-block;
-	padding: 20px;
+	padding: 0 25px;
 	text-decoration: none;
-	color: #e3e3e3;
+	color: #B8B8B8;
 }
 
 span {
@@ -103,12 +103,12 @@ button {
 	height: 25px;
 	font-size: 14px;
 	margin: 0 auto;
+	margin-bottom: 40px;
 	border: 1px solid black;
 	background: none;
 }
 
 .top-content {
-	border: 2px solid transparent;
 	display: inline-block;
 	padding: 40px;
 	width: 100%;
@@ -148,7 +148,6 @@ button {
 	display: inline-block;
 	margin: 0 auto;
 	width: 100%;
-	border: 2px dashed transparent;
 }
 
 .mid-content img {
@@ -158,7 +157,6 @@ button {
 
 .bottom-content {
 	display: inline-block;
-	border: 2px solid transparent;
 }
 
 .features, .about{
@@ -174,14 +172,24 @@ button {
 
 .services, .product, .vision {
 	display: inline-block;
-	margin: 0 auto;
-	padding: 20px;
-	padding-bottom: 40px;
-	width: 32%;
+	margin: 10px auto;
+	padding: 15px;
+	padding-bottom: 25px;
+	width: 31%;
 }
 
 .services {
-	margin-left: 20px;
+	margin-left: 25px;
+}
+
+.product {
+	padding-top: 15px;
+	padding-right: 10px;
+	padding-left: 10px;
+}
+
+.vision {
+	margin-right: 20px;
 }
 
 footer {
